--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
 	font-family: 'Work Sans', sans-serif;
-	background: #e6e6e6;
+	background: #85a3e0;
 	font-size: 16px;
 	color: #7e7e7e;
 }
@@ -79,16 +79,25 @@ a.button {
 }
 
 a:hover{
-background: rgb(255, 255, 255);
-background: -moz-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
-background: -webkit-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
-background: -o-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
-background: -ms-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
-background: linear-gradient(120deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
+	background: rgb(255, 255, 255);
+	background: -moz-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
+	background: -webkit-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
+	background: -o-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
+	background: -ms-linear-gradient(30deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
+	background: linear-gradient(120deg, rgb(255, 255, 255) 38%, rgb(239, 239, 239) 100%);
 
 }
 
 
-#footer {
-	overflow: hidden; margin: 0 0 60px 0;
-	}
+.footer {
+	overflow: hidden; 
+	margin: 0 0 60px 0;
+	left: 0;
+	bottom: 2;
+	width: 100%;
+	background-color: #2f5cb6;
+	border: 1px solid #ccc;
+	color: white;
+	margin-top:-50px;
+
+}
