--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
 	font-family: 'Work Sans', sans-serif;
-	background: #85a3e0;
+	background: #f0f0f5;
 	font-size: 16px;
 	color: #7e7e7e;
 }
@@ -29,12 +29,12 @@ a {
 	list-style: none; 
 	float: right; 
 	margin: 35px 30px 20px ;
-	font-size: 16px;
+	font-size: 12px;
 	}
 
 
 #main {
-	background: url(images/background-content.png);
+	background: url(images/project_papper.png);
 	border: 1px solid #e6e6e6;
 	overflow: hidden;
 	box-shadow: 0px 0px 5px #d8d8d8;
@@ -76,6 +76,16 @@ a.button {
 	border: 1px solid #000;
 	text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
 	color: #000;
+}
+
+a:visited{
+	background: rgb(239, 239, 239);
+	background: -moz-linear-gradient(30deg, rgb(239, 239, 239) 4%, rgb(211, 211, 211) 70%);
+	background: -webkit-linear-gradient(30deg, rgb(239, 239, 239) 4%, rgb(211, 211, 211) 70%);
+	background: -o-linear-gradient(30deg, rgb(239, 239, 239) 4%, rgb(211, 211, 211) 70%);
+	background: -ms-linear-gradient(30deg, rgb(239, 239, 239) 4%, rgb(211, 211, 211) 70%);
+	background: linear-gradient(120deg, rgb(239, 239, 239) 4%, rgb(211, 211, 211) 70%);
+
 }
 
 a:hover{
